add iptables to test connectivity issues with jmeter

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,10 +2,12 @@ version: "2"
 
 services:
   statsd:
-   image: graphiteapp/graphite-statsd
-   ports:
+    image: graphiteapp/graphite-statsd
+    ports:
     - "80:80"
     - "2003-2004:2003-2004"
     - "2023-2024:2023-2024"
     - "8125:8125/udp"
     - "8126:8126"
+    cap_add:
+      - NET_ADMIN
